tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax09/Test.java


public class Test {
	interface A {
		abstract default void m() { 
			
		} 
	}
}